# study-guide

./: .gitignore  README.md  installs.md  mise.toml  notes-tutoring.md  pyproject.toml
frontend/query-methods/: README.md  bun.lockb  package-lock.json  package.json  tsconfig.json
fundamentals/: dsu-union-find.py  linux-tricks.sh
fundamentals/python/: random-select.py  random.py
java/: .mise.toml
java/demo/: .mise.toml  build.gradle
java/flashcards/: HashMap.md  StringBuffer.md
leetcode/: .mise.toml
leetcode/neetcode/: valid_anagram.py
leetcode/problems/word-problems/general/: .mise.toml  all_one.py  balance_coins.py  balance_str_t.py  binary-tree-vertical-order.py  claudey.py  csv-output.py  factor-combinations.py  lca-3.py  leaves-of-binary-tree.py  max-stack.py  max_stack.py  nested-weight-list-sum.py  package-manager.py  pyproject.toml  random-pick-with-weight.py  shopping-rec.py  shuffle-spotify.py  top-k-random-weight.py  top-k-words.py  tree-line.py  user_.py  w.py
leetcode/templates/: backtracking.py
leetcode/templates/double-linked-list/: .mise.toml  README.md  all_one.py  max_stack.py  pyproject.toml
machine-code/: disjoint-set-union-merge-group.py  file-buffer-mt.py  key-val-buffer.py  shopping-cart-sort.py
machine-code/meta/: satellite.py
machine-code/stripe-shipping-costs/: stripe-shipping-costs.py
multithreading/asyncio-return-await/: .mise.toml  returnawait.py
multithreading/compare-js/: main.py
multithreading/delayed-scheduler/: DelayedScheduler.py  ScheduledExecutorService.py
oop_ood/: unix-filesystem.py
system-notes/: flink.md
system-problems/: distributed-hash-table.md  mint_com.md
(+128 files in other folders)
