[tool.poetry]
name = "double-linked-list"
version = "0.1.0"
description = ""
authors = ["boarcoder <boarcoder@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sortedcontainers = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
