[tool.poetry]
name = "word-problems"
version = "0.1.0"
description = ""
authors = ["boarcoder <boarcoder@proton.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.4.2"
binarytree = "^6.5.1"
sortedcontainers = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
